--- a/interface/styles.css
+++ b/interface/styles.css
@@ -250,6 +250,6 @@ button{
 .post-date{
   front-size:20px;
   padding-left:30%;
-  background:green;
-  color: white;
+  background:#EDB70A;
+  color: black;
 }
