--- a/interface/styles.css
+++ b/interface/styles.css
@@ -200,10 +200,13 @@ a:hover{
 
 .user-name {
     font-weight: bold; /* Optionally make the username bold */
-    
-  background:#EDB70A;
-  color:black;
+    background:rgb(0, 61, 36);
+    color:white;
   padding-left:10px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 
 }
 
@@ -251,12 +254,22 @@ button{
 .post-date{
   front-size:20px;
   padding-left:30%;
-  background:#EDB70A;
-  color: black;
+  background:rgb(0, 61, 36);
+  color:white;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  padding-right: 5%;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 
 
 .red-text {
-    color: red;
+   /* color: rgb(163, 229, 255); */
+   border-left: 6px solid rgba(227, 227, 227, 0.582);
+   /* background-color: lightgrey; */
+    font-weight: lighter;
+    line-height: 2em;
+   
 }
